Fixed typo in eclipse project name.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rcs4csv2svn</name>
+	<name>rcs4cvs2svn</name>
 	<comment></comment>
 	<projects>
 	</projects>
